# clawbox

./: .ansible-lint  .cirrus.yml  .gitignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  pyproject.toml
.github/: actionlint.yaml  pull_request_template.md
.github/workflows/: ci.yml  cirrus-integration-labels.yml  cirrus-label-enforcement.yml  release.yml
Formula/: clawbox.rb
ansible/: ansible.cfg  secrets.example.yml
ansible/group_vars/: all.yml  settings.yml
ansible/inventory/: tart_inventory.py
ansible/playbooks/: provision.yml
ansible/roles/cleanup_admin/tasks/: main.yml
ansible/roles/developer_sync_paths/tasks/: main.yml
ansible/roles/homebrew/tasks/: main.yml
ansible/roles/network_preflight/tasks/: main.yml
ansible/roles/node/tasks/: main.yml
ansible/roles/openclaw/tasks/: main.yml
ansible/roles/playwright/tasks/: main.yml
ansible/roles/setup_assistant/tasks/: main.yml
ansible/roles/setup_assistant/templates/: clawbox-apply-wallpaper.py.j2  clawbox-apply-wallpaper.sh.j2  com.clawbox.apply-wallpaper.plist.j2
ansible/roles/shared_folders/tasks/: main.yml
ansible/roles/signal_cli/tasks/: main.yml
ansible/roles/signal_cli/templates/: com.clawbox.signal-cli-payload-sync.plist.j2  sync-signal-cli-payload.sh.j2
ansible/roles/system/tasks/: main.yml
ansible/roles/tailscale/tasks/: main.yml
ansible/roles/tart_guest_agent/tasks/: main.yml
ansible/roles/tart_guest_agent/templates/: org.cirruslabs.tart-guest-agent.plist.j2  org.cirruslabs.tart-guest-daemon.plist.j2
clawbox/: __init__.py  __main__.py  ansible_exec.py  auth.py  cli.py  config.py  errors.py  image.py  io_utils.py  locks.py  main.py  mutagen.py  orchestrator.py  paths.py  pr_policy.py  release_formula.py  release_meta.py  remote_probe.py  scalar_parsing.py  secrets.py  services.py  state.py  status.py  sync_events.py  tart.py  watcher.py
docs/: signal-cli-payload-sync.md
packer/: macos-base.pkr.hcl
scripts/: pr  validate.sh
scripts/ci/: bootstrap.sh  run.sh
scripts/release/: check.sh  metadata.sh  update-formula.sh
tests/integration_py/: run_integration.py
tests/logic_py/: test_ansible_exec.py  test_auth.py  test_ci_scripts.py  test_config.py  test_docs.py  test_entrypoint.py  test_errors.py  test_integration_cleanup.py  test_locks.py  test_logic.py  test_main_cli.py  test_mutagen.py  test_orchestrator_edges.py  test_packaging.py  test_paths.py  test_pr_policy.py  test_release_formula.py  test_release_meta.py  test_secrets.py  test_services.py  test_status.py  test_sync_events.py  test_tart.py  test_tart_inventory.py  test_watcher.py
